@@ -117,6 +117,7 @@
 	- 1st crack at Mandrake specific per-platform macros.
 	- fix: insure that %lang scopes over hard links correctly.
 	- fix: rpmCleanPath was nibbling at .. in macrofiles incorrectly.
+	- fix: check waitpid return code.
 
 3.0.6 -> 4.0
 	- use DIRNAMES/BASENAMES/DIRINDICES not FILENAMES in packages and db.
